# MNISTNN

./: CMakeLists.txt  README
doc/html/: .directory
doc/html/search/: .directory
graphs/100/: .directory
graphs/200/: .directory
graphs/500/: .directory
src/: Perceptron.hpp  main.cpp
